// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ShortcutsTab 스냅샷 > 기본 렌더링 구조가 유지됨 1`] = `
<div>
  <div
    class="flex justify-between items-center mb-lg"
  >
    <span
      class="ant-typography ant-typography-secondary css-dev-only-do-not-override-p45i5k css-var-root"
    >
      단축키를 활성화/비활성화하거나 원하는 키 조합으로 변경할 수 있습니다.
    </span>
    <button
      class="ant-btn css-dev-only-do-not-override-p45i5k css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-sm"
      type="button"
    >
      <span
        class="ant-btn-icon"
      >
        <span
          aria-label="reload"
          class="anticon anticon-reload"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="reload"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M909.1 209.3l-56.4 44.1C775.8 155.1 656.2 92 521.9 92 290 92 102.3 279.5 102 511.5 101.7 743.7 289.8 932 521.9 932c181.3 0 335.8-115 394.6-276.1 1.5-4.2-.7-8.9-4.9-10.3l-56.7-19.5a8 8 0 00-10.1 4.8c-1.8 5-3.8 10-5.9 14.9-17.3 41-42.1 77.8-73.7 109.4A344.77 344.77 0 01655.9 829c-42.3 17.9-87.4 27-133.8 27-46.5 0-91.5-9.1-133.8-27A341.5 341.5 0 01279 755.2a342.16 342.16 0 01-73.7-109.4c-17.9-42.4-27-87.4-27-133.9s9.1-91.5 27-133.9c17.3-41 42.1-77.8 73.7-109.4 31.6-31.6 68.4-56.4 109.3-73.8 42.3-17.9 87.4-27 133.8-27 46.5 0 91.5 9.1 133.8 27a341.5 341.5 0 01109.3 73.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.6 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c-.1-6.6-7.8-10.3-13-6.2z"
            />
          </svg>
        </span>
      </span>
      <span>
        기본값으로 초기화
      </span>
    </button>
  </div>
  <div
    class="css-var-root ant-table-css-var ant-table-wrapper !mt-sm css-dev-only-do-not-override-p45i5k"
  >
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-p45i5k css-var-root"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-table ant-table-small css-var-root ant-table-css-var css-dev-only-do-not-override-p45i5k"
        >
          <div
            class="ant-table-container"
          >
            <div
              class="ant-table-content"
            >
              <table
                style="table-layout: auto;"
              >
                <colgroup>
                  <col />
                  <col
                    style="width: 150px;"
                  />
                  <col
                    style="width: 100px;"
                  />
                  <col
                    style="width: 80px;"
                  />
                </colgroup>
                <thead
                  class="ant-table-thead"
                >
                  <tr>
                    <th
                      class="ant-table-cell"
                      scope="col"
                    >
                      기능
                    </th>
                    <th
                      class="ant-table-cell"
                      scope="col"
                    >
                      단축키
                    </th>
                    <th
                      class="ant-table-cell"
                      scope="col"
                    >
                      카테고리
                    </th>
                    <th
                      class="ant-table-cell"
                      scope="col"
                    >
                      활성화
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="ant-table-tbody"
                >
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="new-work"
                  >
                    <td
                      class="ant-table-cell"
                    >
                      <div>
                        <span
                          class="ant-typography css-dev-only-do-not-override-p45i5k css-var-root"
                        >
                          <strong>
                            새 작업 추가
                          </strong>
                        </span>
                        <br />
                        <span
                          class="ant-typography ant-typography-secondary !text-xs css-dev-only-do-not-override-p45i5k css-var-root"
                        >
                          새로운 작업을 추가합니다
                        </span>
                      </div>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      <div
                        class="ant-space css-dev-only-do-not-override-p45i5k ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-var-root"
                      >
                        <div
                          class="ant-space-item"
                        >
                          <span
                            class="ant-tag ant-tag-filled !font-mono !text-[13px] !py-xs !px-sm css-dev-only-do-not-override-p45i5k css-var-root"
                          >
                            Alt+N
                          </span>
                        </div>
                        <div
                          class="ant-space-item"
                        >
                          <button
                            class="ant-btn css-dev-only-do-not-override-p45i5k css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                            type="button"
                          >
                            <span
                              class="ant-btn-icon"
                            >
                              <span
                                aria-label="edit"
                                class="anticon anticon-edit"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="edit"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </button>
                        </div>
                      </div>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      <span
                        class="ant-tag ant-tag-filled css-dev-only-do-not-override-p45i5k css-var-root"
                        style="background-color: #e8f1fc; color: #3182F6;"
                      >
                        일반
                      </span>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      <button
                        aria-checked="true"
                        class="ant-switch ant-switch-small css-dev-only-do-not-override-p45i5k css-var-root ant-switch-checked"
                        role="switch"
                        type="button"
                      >
                        <div
                          class="ant-switch-handle"
                        />
                        <span
                          class="ant-switch-inner"
                        >
                          <span
                            class="ant-switch-inner-checked"
                          />
                          <span
                            class="ant-switch-inner-unchecked"
                          />
                        </span>
                      </button>
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="toggle-timer"
                  >
                    <td
                      class="ant-table-cell"
                    >
                      <div>
                        <span
                          class="ant-typography css-dev-only-do-not-override-p45i5k css-var-root"
                        >
                          <strong>
                            타이머 토글
                          </strong>
                        </span>
                        <br />
                        <span
                          class="ant-typography ant-typography-secondary !text-xs css-dev-only-do-not-override-p45i5k css-var-root"
                        >
                          타이머를 시작/정지합니다
                        </span>
                      </div>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      <div
                        class="ant-space css-dev-only-do-not-override-p45i5k ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-var-root"
                      >
                        <div
                          class="ant-space-item"
                        >
                          <span
                            class="ant-tag ant-tag-filled !font-mono !text-[13px] !py-xs !px-sm css-dev-only-do-not-override-p45i5k css-var-root"
                          >
                            Alt+S
                          </span>
                        </div>
                        <div
                          class="ant-space-item"
                        >
                          <button
                            class="ant-btn css-dev-only-do-not-override-p45i5k css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                            type="button"
                          >
                            <span
                              class="ant-btn-icon"
                            >
                              <span
                                aria-label="edit"
                                class="anticon anticon-edit"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="edit"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </button>
                        </div>
                      </div>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      <span
                        class="ant-tag ant-tag-filled css-dev-only-do-not-override-p45i5k css-var-root"
                        style="background-color: #e8f1fc; color: #3182F6;"
                      >
                        타이머
                      </span>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      <button
                        aria-checked="true"
                        class="ant-switch ant-switch-small css-dev-only-do-not-override-p45i5k css-var-root ant-switch-checked"
                        role="switch"
                        type="button"
                      >
                        <div
                          class="ant-switch-handle"
                        />
                        <span
                          class="ant-switch-inner"
                        >
                          <span
                            class="ant-switch-inner-checked"
                          />
                          <span
                            class="ant-switch-inner-unchecked"
                          />
                        </span>
                      </button>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ShortcutsTab 스냅샷 > 빈 단축키 목록 구조가 유지됨 1`] = `
<div>
  <div
    class="flex justify-between items-center mb-lg"
  >
    <span
      class="ant-typography ant-typography-secondary css-dev-only-do-not-override-p45i5k css-var-root"
    >
      단축키를 활성화/비활성화하거나 원하는 키 조합으로 변경할 수 있습니다.
    </span>
    <button
      class="ant-btn css-dev-only-do-not-override-p45i5k css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-sm"
      type="button"
    >
      <span
        class="ant-btn-icon"
      >
        <span
          aria-label="reload"
          class="anticon anticon-reload"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="reload"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M909.1 209.3l-56.4 44.1C775.8 155.1 656.2 92 521.9 92 290 92 102.3 279.5 102 511.5 101.7 743.7 289.8 932 521.9 932c181.3 0 335.8-115 394.6-276.1 1.5-4.2-.7-8.9-4.9-10.3l-56.7-19.5a8 8 0 00-10.1 4.8c-1.8 5-3.8 10-5.9 14.9-17.3 41-42.1 77.8-73.7 109.4A344.77 344.77 0 01655.9 829c-42.3 17.9-87.4 27-133.8 27-46.5 0-91.5-9.1-133.8-27A341.5 341.5 0 01279 755.2a342.16 342.16 0 01-73.7-109.4c-17.9-42.4-27-87.4-27-133.9s9.1-91.5 27-133.9c17.3-41 42.1-77.8 73.7-109.4 31.6-31.6 68.4-56.4 109.3-73.8 42.3-17.9 87.4-27 133.8-27 46.5 0 91.5 9.1 133.8 27a341.5 341.5 0 01109.3 73.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.6 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c-.1-6.6-7.8-10.3-13-6.2z"
            />
          </svg>
        </span>
      </span>
      <span>
        기본값으로 초기화
      </span>
    </button>
  </div>
  <div
    class="css-var-root ant-table-css-var ant-table-wrapper !mt-sm css-dev-only-do-not-override-p45i5k"
  >
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-p45i5k css-var-root"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-table ant-table-small ant-table-empty css-var-root ant-table-css-var css-dev-only-do-not-override-p45i5k"
        >
          <div
            class="ant-table-container"
          >
            <div
              class="ant-table-content"
            >
              <table
                style="table-layout: auto;"
              >
                <colgroup>
                  <col />
                  <col
                    style="width: 150px;"
                  />
                  <col
                    style="width: 100px;"
                  />
                  <col
                    style="width: 80px;"
                  />
                </colgroup>
                <thead
                  class="ant-table-thead"
                >
                  <tr>
                    <th
                      class="ant-table-cell"
                      scope="col"
                    >
                      기능
                    </th>
                    <th
                      class="ant-table-cell"
                      scope="col"
                    >
                      단축키
                    </th>
                    <th
                      class="ant-table-cell"
                      scope="col"
                    >
                      카테고리
                    </th>
                    <th
                      class="ant-table-cell"
                      scope="col"
                    >
                      활성화
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="ant-table-tbody"
                >
                  <tr
                    class="ant-table-placeholder"
                  >
                    <td
                      class="ant-table-cell"
                      colspan="4"
                    >
                      <div
                        class="css-dev-only-do-not-override-p45i5k css-var-root ant-empty ant-empty-normal"
                      >
                        <div
                          class="ant-empty-image"
                        >
                          <svg
                            height="41"
                            viewBox="0 0 64 41"
                            width="64"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <title>
                              데이터 없음
                            </title>
                            <g
                              fill="none"
                              fill-rule="evenodd"
                              transform="translate(0 1)"
                            >
                              <ellipse
                                cx="32"
                                cy="33"
                                fill="#f5f5f5"
                                rx="32"
                                ry="7"
                              />
                              <g
                                fill-rule="nonzero"
                                stroke="#d9d9d9"
                              >
                                <path
                                  d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                                />
                                <path
                                  d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                                  fill="#fafafa"
                                />
                              </g>
                            </g>
                          </svg>
                        </div>
                        <div
                          class="ant-empty-description"
                        >
                          데이터 없음
                        </div>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
